# code-crew

./: README.md  pyproject.toml
src/code_crew/: crew.py  main.py
src/code_crew/config/: agents.yaml  config_loader.py  tasks.yaml
src/code_crew/tools/: custom_tool.py
