[tool.poetry]
name = "code_crew"
version = "0.1.0"
description = "code-crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
code_crew = "code_crew.main:run"
train = "code_crew.main:train"
replay = "code_crew.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
